# telescope

./: .cirrus.yml  .gitignore  .woodpecker.yaml  ChangeLog  LICENSE  Makefile.am  README.md  about.c  autogen.sh  bufio.c  bufio.h  certs.c  certs.h  cmd.c  cmd.h  compat.h  compl.c  compl.h  configure.ac  control.c  control.h  defaults.c  defaults.h  downloads.c  ev.c  ev.h  exec.c  exec.h  fs.c  fs.h  gemini.c  gemtext.c  gen-emoji-matcher.sh  gencmd.awk  genemoji.sh  hash.c  help.c  hist.c  hist.h  identity.c  (+46 more)
.github/ci/: before-install.sh  build.sh
compat/: asprintf.c  err.c  explicit_bzero.c  fmt_scaled.c  freezero.c  getdtablecount.c  getdtablesize.c  getprogname.c  imsg-buffer.c  imsg.c  imsg.h  ohash.c  ohash.h  reallocarray.c  recallocarray.c  setproctitle.c  strcasestr.c  strsep.c  strtonum.c
contrib/: README.md  brutalist.config  dark.config  light.config  sample.config  xdg-migrate.sh
contrib/coccinelle/: wrap.cocci
include/: cmd.h  compat.h  compl.h  defaults.h  fs.h  minibuffer.h  parser.h  session.h  telescope.h  ui.h  utf8.h  utils.h
keys/: telescope-0.10.pub  telescope-0.11.pub  telescope-0.12.pub  telescope-0.3.pub  telescope-0.4.pub  telescope-0.5.pub  telescope-0.6.pub  telescope-0.7.pub  telescope-0.8.pub  telescope-0.9.pub
libgrapheme/: Makefile  config.mk  configure  grapheme.h
libgrapheme/benchmark/: case.c  character.c  line.c  sentence.c  utf8-decode.c  util.c  util.h  word.c
libgrapheme/man/: grapheme_decode_utf8.sh  grapheme_encode_utf8.sh  grapheme_is_character_break.sh  grapheme_is_lowercase.sh  grapheme_is_titlecase.sh  grapheme_is_titlecase_utf8.sh  grapheme_is_uppercase.sh  grapheme_is_uppercase_utf8.sh  grapheme_next_character_break.sh  grapheme_next_character_break_utf8.sh  grapheme_next_line_break.sh  grapheme_next_line_break_utf8.sh  grapheme_next_sentence_break.sh  grapheme_next_sentence_break_utf8.sh  grapheme_next_word_break.sh  grapheme_next_word_break_utf8.sh  grapheme_to_lowercase.sh  grapheme_to_lowercase_utf8.sh  grapheme_to_titlecase.sh  grapheme_to_titlecase_utf8.sh  grapheme_to_uppercase.sh  libgrapheme.sh
libgrapheme/man/template/: is_case.sh  next_break.sh  to_case.sh
libgrapheme/src/: case.c  character.c  line.c  sentence.c  utf8.c  util.c  util.h  word.c
libgrapheme/test/: case.c  character.c  line.c  sentence.c  utf8-decode.c  utf8-encode.c  util.c  util.h  word.c
maintenance/: README.md
pages/: about_about.gmi  about_about.gmi.in  about_crash.gmi.in  about_help.gmi  about_help.gmi.in  about_license.gmi  about_license.gmi.in  about_new.gmi  about_new.gmi.in  bookmarks.gmi  bookmarks.gmi.in
parser/: parser.c  parser_gemtext.c  parser_gophermap.c  parser_textpatch.c
phos/: README.md  phos.h  phos_uri.c
site/: Makefile  footer.html  gallery.gmi  gem2html  header.html  index.gmi  index.html  log.gmi  menu.pl  style.css  subst  telescope.1.html  telescope.1.txt
site/gallery/: index.gmi  index.html
test/: .gitignore  Makefile.am  evtest.c  gm-00  gm-01  gmi-00  gmiparser.c  gmparser.c  iritest.c  mailcap.c  mc.exp.many  mc.test.many  mc.test.simple  test-gmparser  test-mailcap
u/: utf8.c  wrap.c
